Fix warnings from static analysis

--- a/3d-sandbox.vcxproj.filters
+++ b/3d-sandbox.vcxproj.filters
@@ -34,6 +34,9 @@
     <ClCompile Include="code\grid.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="code\ShaderManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="code\App.h">
@@ -70,6 +73,8 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="code\grid.h" />
+    <ClInclude Include="code\ShaderManager.h" />
+    <ClInclude Include="code\gsl.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\gooch_fragment.glsl">
