--- a/3d-sandbox.vcxproj
+++ b/3d-sandbox.vcxproj
@@ -27,18 +27,21 @@
     <ClCompile Include="code\OpenGLGeo.cpp" />
     <ClCompile Include="code\platform.cpp" />
     <ClCompile Include="code\Shader.cpp" />
+    <ClCompile Include="code\ShaderManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="code\App.h" />
     <ClInclude Include="code\Camera.h" />
     <ClInclude Include="code\gl.h" />
     <ClInclude Include="code\grid.h" />
+    <ClInclude Include="code\gsl.hpp" />
     <ClInclude Include="code\Loader.h" />
     <ClInclude Include="code\mat4.h" />
     <ClInclude Include="code\mat4_invertable.h" />
     <ClInclude Include="code\OpenGLGeo.h" />
     <ClInclude Include="code\platform.h" />
     <ClInclude Include="code\Shader.h" />
+    <ClInclude Include="code\ShaderManager.h" />
     <ClInclude Include="code\vec3.h" />
     <ClInclude Include="code\vec4.h" />
   </ItemGroup>
@@ -98,18 +101,34 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>$(SolutionDir)build\$(Configuration)\</OutDir>
+    <CodeAnalysisRuleSet>core-guidelines.ruleset</CodeAnalysisRuleSet>
+    <RunCodeAnalysis>false</RunCodeAnalysis>
+    <EnableCppCoreCheck>true</EnableCppCoreCheck>
+    <EnableExperimentalCppCoreCheck>true</EnableExperimentalCppCoreCheck>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>$(SolutionDir)build\$(Configuration)\</OutDir>
+    <CodeAnalysisRuleSet>core-guidelines.ruleset</CodeAnalysisRuleSet>
+    <RunCodeAnalysis>false</RunCodeAnalysis>
+    <EnableCppCoreCheck>true</EnableCppCoreCheck>
+    <EnableExperimentalCppCoreCheck>true</EnableExperimentalCppCoreCheck>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>$(SolutionDir)build\$(Platform)\$(Configuration)\</OutDir>
+    <CodeAnalysisRuleSet>core-guidelines.ruleset</CodeAnalysisRuleSet>
+    <RunCodeAnalysis>false</RunCodeAnalysis>
+    <EnableCppCoreCheck>true</EnableCppCoreCheck>
+    <EnableExperimentalCppCoreCheck>true</EnableExperimentalCppCoreCheck>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>$(SolutionDir)build\$(Platform)\$(Configuration)\</OutDir>
+    <CodeAnalysisRuleSet>core-guidelines.ruleset</CodeAnalysisRuleSet>
+    <RunCodeAnalysis>false</RunCodeAnalysis>
+    <EnableCppCoreCheck>true</EnableCppCoreCheck>
+    <EnableExperimentalCppCoreCheck>true</EnableExperimentalCppCoreCheck>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -121,6 +140,7 @@
       <AdditionalIncludeDirectories>$(SolutionDir)\build\win32-glew-2.1.0\include;$(SolutionDir)\build\win32-sdl\SDL2-2.0.8\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <MinimalRebuild>false</MinimalRebuild>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <EnablePREfast>false</EnablePREfast>
     </ClCompile>
     <Link>
       <TargetMachine>MachineX86</TargetMachine>
@@ -138,6 +158,7 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <AdditionalIncludeDirectories>$(SolutionDir)\build\win32-glew-2.1.0\include;$(SolutionDir)\build\win32-sdl\SDL2-2.0.8\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <EnablePREfast>false</EnablePREfast>
     </ClCompile>
     <Link>
       <TargetMachine>MachineX86</TargetMachine>
@@ -154,6 +175,7 @@
       <AdditionalIncludeDirectories>$(SolutionDir)\build\win32-glew-2.1.0\include;$(SolutionDir)\build\win32-sdl\SDL2-2.0.8\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <MinimalRebuild>false</MinimalRebuild>
       <PreprocessorDefinitions>_USE_MATH_DEFINES;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <EnablePREfast>false</EnablePREfast>
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>$(SolutionDir)\build\win32-sdl\SDL2-2.0.8\lib\x64;$(SolutionDir)\build\win32-glew-2.1.0\lib\Release\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
@@ -165,6 +187,7 @@
     <ClCompile>
       <AdditionalIncludeDirectories>$(SolutionDir)\build\win32-glew-2.1.0\include;$(SolutionDir)\build\win32-sdl\SDL2-2.0.8\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>_USE_MATH_DEFINES;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <EnablePREfast>false</EnablePREfast>
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>$(SolutionDir)\build\win32-sdl\SDL2-2.0.8\lib\x64;$(SolutionDir)\build\win32-glew-2.1.0\lib\Release\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
